# openAgenda

./: .env.example  .gitignore  README.md  generate_api_key.py  main.py  pyproject.toml  run_openagenda_api.py
mytwip/api/openagenda/: app.py
mytwip/config/openagenda/: settings.py
mytwip/core/openagenda/: core.py
mytwip/docs/openagenda/: openapi.json
mytwip/utils/: common.py  security.py
